Added update callbacks for RNNavMeshes/CrowdAgents.
Also made manager RNNavMeshes/CrowdAgents getters return pointers.
Also made RNNavMeshes/CrowdAgents dtors private.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -275,6 +275,9 @@ if (MSVC)
 
   # Use multi-core compilation
   add_definitions("/GM- /MP")
+  
+  #Python build
+  add_definitions("/DPYTHON_BUILD")
 
 else()
 
@@ -309,6 +312,9 @@ else()
   else()
     message(FATAL_ERROR "Invalid optimize value! Was: '${OPTIMIZE}'")
   endif()
+
+  #Python build
+  add_definitions("-DPYTHON_BUILD")
 
 endif()
 
